<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".student_activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_admin"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="218dp"
        android:layout_height="248dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/img_2"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:elevation="15dp"
            android:gravity="center"
            android:text="@string/view_user_logins"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:visibility="visible"
            app:backgroundTint="@color/pinkColor"
            app:shapeAppearanceOverlay="@style/Button5"
            tools:ignore="DuplicateSpeakableTextCheck,OnClick,TextContrastCheck" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:elevation="15dp"
            android:gravity="center"
            android:text="@string/create_teacher_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:visibility="visible"
            app:backgroundTint="@color/pinkColor"
            app:shapeAppearanceOverlay="@style/Button5"
            tools:ignore="DuplicateSpeakableTextCheck,OnClick,TextContrastCheck" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:elevation="15dp"
            android:gravity="center"
            android:text="@string/manage_quizes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:visibility="visible"
            app:backgroundTint="@color/pinkColor"
            app:shapeAppearanceOverlay="@style/Button5"
            tools:ignore="DuplicateSpeakableTextCheck,OnClick,TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>